<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_radius_top_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/barlow_semibold"
        android:text="@string/congratulation"
        android:textColor="@color/blue_pr"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/barlow_regular"
        android:text="@string/answered_all"
        android:textColor="@color/black_sc"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/blue_sc_bg"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_regular"
            android:text="@string/your_score_txt"
            android:textAlignment="center"
            android:textColor="@color/black_pr"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_show_exam_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_semibold"
            android:textAlignment="center"
            android:textColor="@color/blue_pr"
            android:textSize="48sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_exam_complete_continue"
        style="@style/blue_btn_style"
        android:layout_marginBottom="20dp"
        android:text="@string/submit" />
</LinearLayout>