<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/white_radius_top_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reset_password"
        android:textSize="34sp"
        android:textColor="@color/blue_pr"
        android:fontFamily="@font/barlow_semibold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/set_paas"
        android:textSize="18sp"
        android:textColor="@color/black_sc"
        android:fontFamily="@font/barlow_regular"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edt_bg">
        <ImageView
            android:src="@drawable/ic_pass"
            style="@style/edt_icon_style"
            tools:ignore="ContentDescription" />
        <EditText
            android:id="@+id/edt_reset_pass"
            android:layout_marginEnd="50dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            style="@style/edt_txt_style"
            android:importantForAutofill="no" />
        <ImageView
            android:id="@+id/ic_pass_show"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:src="@drawable/ic_pass_hide"
            style="@style/edt_icon_style"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edt_bg">
        <ImageView
            android:src="@drawable/ic_pass"
            style="@style/edt_icon_style"
            tools:ignore="ContentDescription" />
        <EditText
            android:id="@+id/edt_reset_confirm_pass"
            android:layout_marginEnd="50dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            style="@style/edt_txt_style"
            android:importantForAutofill="no" />
        <ImageView
            android:id="@+id/ic_confirm_pass_show"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:src="@drawable/ic_pass_hide"
            style="@style/edt_icon_style"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
    <TextView
        android:id="@+id/reset_dialog_show_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="12dp"
        android:textSize="16sp"
        android:fontFamily="@font/barlow_regular"
        android:textColor="@color/red_pr"
        android:background="@drawable/red_sc_bg"
        android:visibility="gone"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reset_pass"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/reset_password"
        style="@style/blue_btn_style"/>

</LinearLayout>