<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_pr"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_radius_bottom_bg"
        android:elevation="3dp"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_semibold"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="@color/white_pr"
            android:textSize="38sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/barlow_light"
            android:text="@string/to_get_start_now"
            android:textAlignment="center"
            android:textColor="@color/white_pr"
            android:textSize="32sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarThumbVertical="@color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edt_bg">

                <ImageView
                    style="@style/edt_icon_style"
                    android:src="@drawable/ic_user"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/edt_sign_up_name"
                    style="@style/edt_txt_style"
                    android:hint="@string/full_name"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_name_special_character"
                style="@style/txt_error_style" />

            <TextView
                android:id="@+id/txt_name_empty"
                style="@style/txt_error_style" />

            <TextView
                android:id="@+id/txt_name_numeric_num"
                style="@style/txt_error_style" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edt_bg">

                <ImageView
                    style="@style/edt_icon_style"
                    android:src="@drawable/ic_email"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/edt_sign_up_email"
                    style="@style/edt_txt_style"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_email_validate"
                style="@style/txt_error_style" />

            <TextView
                android:id="@+id/txt_email_empty"
                style="@style/txt_error_style" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edt_bg">

                <ImageView
                    style="@style/edt_icon_style"
                    android:src="@drawable/ic_phone"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/edt_sign_up_phone"
                    style="@style/edt_txt_style"
                    android:hint="@string/phone_number"
                    android:importantForAutofill="no"
                    android:inputType="phone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_phone_empty"
                style="@style/txt_error_style" />

            <TextView
                android:id="@+id/txt_phone_validate"
                style="@style/txt_error_style" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edt_bg">

                <ImageView
                    style="@style/edt_icon_style"
                    android:src="@drawable/ic_phone"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/edt_sign_up_grd_phone"
                    style="@style/edt_txt_style"
                    android:hint="@string/grd_phone_number"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    tools:ignore="DuplicateIds" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_grd_phone_validate"
                style="@style/txt_error_style" />

            <TextView
                android:id="@+id/txt_grd_phone_empty"
                style="@style/txt_error_style" />

            <RelativeLayout
                android:id="@+id/course_selector_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edt_bg">

                <ImageView
                    style="@style/edt_icon_style"
                    android:src="@drawable/ic_course"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/txt_select_course"
                    style="@style/edt_txt_style"
                    android:layout_marginEnd="50dp"
                    android:gravity="center_vertical"
                    android:hint="@string/select_your_course" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/white_ripple"
                    android:padding="10dp"
                    android:src="@drawable/ic_down_arrow"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_course_empty"
                style="@style/txt_error_style" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edt_bg">

                <ImageView
                    style="@style/edt_icon_style"
                    android:src="@drawable/ic_pass"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/edt_sign_up_pass"
                    style="@style/edt_txt_style"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />

                <ImageView
                    android:id="@+id/ic_pass_show"
                    style="@style/edt_icon_style"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/ic_pass_hide"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_pass_empty"
                style="@style/txt_error_style" />

            <TextView
                android:id="@+id/txt_pass_uppercase"
                style="@style/txt_error_style" />

            <TextView
                android:id="@+id/txt_pass_lowercase"
                style="@style/txt_error_style" />

            <TextView
                android:id="@+id/txt_pass_special_character"
                style="@style/txt_error_style" />

            <TextView
                android:id="@+id/txt_pass_digits"
                style="@style/txt_error_style" />

            <TextView
                android:id="@+id/txt_pass_num"
                style="@style/txt_error_style" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edt_bg">

                <ImageView
                    style="@style/edt_icon_style"
                    android:src="@drawable/ic_pass"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/edt_sign_up_confirm_pass"
                    style="@style/edt_txt_style"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/confirm_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />

                <ImageView
                    android:id="@+id/ic_confirm_pass_show"
                    style="@style/edt_icon_style"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/ic_pass_hide"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_confirm_pass"
                style="@style/txt_error_style" />

            <TextView
                android:id="@+id/txt_confirm_pass_empty"
                style="@style/txt_error_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_regular"
                    android:text="Already have an account?"
                    android:textColor="@color/black_sc"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/txt_btn_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/barlow_semibold"
                    android:text="Sign in"
                    android:textColor="@color/blue_pr"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                style="@style/blue_btn_style"
                android:layout_marginTop="15dp"
                android:text="@string/sign_up" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>