<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_pr"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:elevation="2dp"
        android:orientation="vertical"
        android:background="@drawable/blue_radius_bottom_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:src="@drawable/examiner_logo"
                tools:ignore="ContentDescription" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/white_sc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/welcome"
            android:textSize="38sp"
            android:textColor="@color/white_pr"
            android:textAlignment="center"
            android:fontFamily="@font/barlow_semibold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/glad_to_see_you"
            android:textSize="32sp"
            android:textColor="@color/white_pr"
            android:textAlignment="center"
            android:fontFamily="@font/barlow_light"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <!-- Layout for Email -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/edt_bg">
                <ImageView
                    android:src="@drawable/ic_email"
                    style="@style/edt_icon_style"
                    tools:ignore="ContentDescription" />
                <EditText
                    android:id="@+id/edt_email"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    style="@style/edt_txt_style"
                    android:importantForAutofill="no" />
            </RelativeLayout>
            <!-- Layout for Password -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edt_bg">
                <ImageView
                    android:src="@drawable/ic_pass"
                    style="@style/edt_icon_style"
                    tools:ignore="ContentDescription" />
                <EditText
                    android:id="@+id/edt_pass"
                    android:layout_marginEnd="50dp"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    style="@style/edt_txt_style"
                    android:importantForAutofill="no" />
                <ImageView
                    android:id="@+id/ic_pass_show"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/ic_pass_hide"
                    style="@style/edt_icon_style"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>
            <!-- Layout for Checkbox & Forgot Pass -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:id="@+id/remember_check"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_alignParentStart="true"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/ic_remember_check"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_uncheck"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/remember_me"
                        android:textSize="16sp"
                        android:textColor="@color/black_sc"
                        android:fontFamily="@font/barlow_regular"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/txt_btn_forgot_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/forgot_password"
                    android:textSize="16sp"
                    android:textColor="@color/blue_pr"
                    android:fontFamily="@font/barlow_regular"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
            <TextView
                android:id="@+id/show_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="12dp"
                android:textSize="16sp"
                android:fontFamily="@font/barlow_regular"
                android:textColor="@color/red_pr"
                android:background="@drawable/red_sc_bg"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have any account?"
                    android:textSize="16sp"
                    android:textColor="@color/black_sc"
                    android:fontFamily="@font/barlow_regular"
                    tools:ignore="HardcodedText"/>
                <TextView
                    android:id="@+id/txt_btn_create_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Create One"
                    android:textSize="16sp"
                    android:textColor="@color/blue_pr"
                    android:fontFamily="@font/barlow_semibold"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signin"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:text="@string/sign_in"
                style="@style/blue_btn_style"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>